# ContextKeep

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  RELEASE_NOTES_V2.1.md  check_timezone.py  contextkeep-server.service  contextkeep-webui.service  docker-compose.yml  install.py  install_services.sh  mcp_config.antigravity.example.json  mcp_config.docker.example.json  mcp_config.example.json  mcp_config.json  mcp_config.sse.example.json  migrate.py  pyproject.toml  requirements.txt  server.py  store_mem_cli.py  webui.py
core/: __init__.py  categories.py  database.py  memory_manager.py
docs/: CLIENT_CONFIGURATION.md  DIRECTIVE_UPDATE.md  DOCKER_V2_1.md  MIGRATION_GUIDE.md  SAFE_UPGRADE.md  UPGRADING_FROM_V1.md
scripts/: backup_contextkeep.py  healthcheck.py  restore_contextkeep.py  start_services.py  upgrade_to_v2_1.py
static/css/: style.css
static/js/: app.js
templates/: index.html
